<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".MoreinfoFragment">


        <TextView
            android:id="@+id/textView9"
            android:layout_width="386dp"
            android:layout_height="78dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/bungee"
            android:text="@string/moreinfotitle"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="577dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <ScrollView
                android:layout_width="372dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/InfoBody"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Problem"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Records"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Records1"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/situation1"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="A code number is either tattooed  in a rabbits ear or indicated in a  cage tag. The rabbitry owner will  then check the notebook for the  rabbit's family, breed, weight,  health records."
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Problem"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/ProblemBody1"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/ProblemBody2"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/ProposedTitle"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Proposed1"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Proposed2"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Proposed3"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Proposed4"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Proposed5"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/Objective"
                        android:textColor="#000000"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/objective1"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="To design an application that  will notify the user about a  rabbit's breeding status."
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView81"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/boogaloo"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/objective3"
                        android:textColor="#000000"
                        android:textSize="18sp" />


                </LinearLayout>
            </ScrollView>
            A
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>