<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="365dp"
            android:layout_height="113dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="23dp"
            android:fontFamily="@font/bungee"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="363dp"
            android:layout_height="81dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/Description"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="211dp"
            android:layout_height="207dp"
            android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/bunny" />

        <Button
            android:id="@+id/button"
            android:layout_width="178dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/buttoncircle"
            android:fontFamily="@font/archivo_black"
            android:text="Members"
            android:textColor="#000000"
            android:textSize="20sp"
            app:backgroundTint="#FFA500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="178dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/buttoncircle"
            android:fontFamily="@font/archivo_black"
            android:text="MORE INFO"
            android:textColor="#000000"
            android:textSize="20sp"
            app:backgroundTint="#FFA500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/Objective"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="351dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/Objective1"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="372dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/Objective2"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="371dp"
            android:layout_height="65dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/Objective3"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="362dp"
            android:layout_height="46dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/boogaloo"
            android:text="@string/Objective4"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>